--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
                 <h2>Admin<span>Panel</span></h2>
             </div>
             <nav class="nav-menu">
-                <a href="#" class="nav-link active">
+                <a href="#" class="nav-link active" id="usersNavLink" onclick="switchView('users')">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
                         <circle cx="9" cy="7" r="4"></circle>
@@ -27,6 +27,16 @@
                         <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
                     </svg>
                     Users
+                </a>
+                <a href="#" class="nav-link" id="blogsNavLink" onclick="switchView('blogs')">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                        <polyline points="14 2 14 8 20 8"></polyline>
+                        <line x1="16" y1="13" x2="8" y2="13"></line>
+                        <line x1="16" y1="17" x2="8" y2="17"></line>
+                        <polyline points="10 9 9 9 8 9"></polyline>
+                    </svg>
+                    Blogs
                 </a>
                 <a href="#" class="nav-link">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -37,15 +47,6 @@
                     </svg>
                     Dashboard
                 </a>
-                <a href="#" class="nav-link">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path
-                            d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.38a2 2 0 0 0-.73-2.73l-.15-.1a2 2 0 0 1-1-1.72v-.51a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z">
-                        </path>
-                        <circle cx="12" cy="12" r="3"></circle>
-                    </svg>
-                    Settings
-                </a>
             </nav>
         </aside>
 
@@ -53,7 +54,7 @@
         <main class="main-content">
             <header class="top-bar">
                 <div class="search-bar">
-                    <input type="text" placeholder="Search users...">
+                    <input type="text" placeholder="Search...">
                 </div>
                 <div class="user-profile">
                     <span class="avatar">AD</span>
@@ -62,44 +63,82 @@
             </header>
 
             <div class="content-wrapper">
-                <div class="page-header">
-                    <h1>User Management</h1>
-                    <button class="btn btn-primary" onclick="openModal('create')">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                            stroke-width="2">
-                            <line x1="12" y1="5" x2="12" y2="19"></line>
-                            <line x1="5" y1="12" x2="19" y2="12"></line>
-                        </svg>
-                        Add New User
-                    </button>
+                <!-- User Section -->
+                <div id="userSection">
+                    <div class="page-header">
+                        <h1>User Management</h1>
+                        <button class="btn btn-primary" onclick="openModal('create')">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <line x1="12" y1="5" x2="12" y2="19"></line>
+                                <line x1="5" y1="12" x2="19" y2="12"></line>
+                            </svg>
+                            Add New User
+                        </button>
+                    </div>
+
+                    <!-- Users Table -->
+                    <div class="table-container shadow-card">
+                        <table class="data-table" id="usersTable">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Name</th>
+                                    <th>Email</th>
+                                    <th>Role</th>
+                                    <th>Status</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody id="userListBody">
+                                <!-- Populated by JS -->
+                            </tbody>
+                        </table>
+                        <div class="pagination" id="userPagination">
+                            <!-- Populated by JS -->
+                        </div>
+                    </div>
                 </div>
 
-                <!-- Users Table -->
-                <div class="table-container shadow-card">
-                    <table class="data-table" id="usersTable">
-                        <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Name</th>
-                                <th>Email</th>
-                                <th>Role</th>
-                                <th>Status</th>
-                                <th>Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody id="userListBody">
+                <!-- Blog Section -->
+                <div id="blogSection" style="display: none;">
+                    <div class="page-header">
+                        <h1>Blog Management</h1>
+                        <button class="btn btn-primary" onclick="openBlogModal('create')">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <line x1="12" y1="5" x2="12" y2="19"></line>
+                                <line x1="5" y1="12" x2="19" y2="12"></line>
+                            </svg>
+                            Add New Blog
+                        </button>
+                    </div>
+
+                    <!-- Blogs Table -->
+                    <div class="table-container shadow-card">
+                        <table class="data-table" id="blogsTable">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Title</th>
+                                    <th>Created At</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody id="blogListBody">
+                                <!-- Populated by JS -->
+                            </tbody>
+                        </table>
+                        <div class="pagination" id="blogPagination">
                             <!-- Populated by JS -->
-                        </tbody>
-                    </table>
-                    <div class="pagination" id="pagination">
-                        <!-- Populated by JS -->
+                        </div>
                     </div>
                 </div>
             </div>
         </main>
     </div>
 
-    <!-- Modal Form -->
+    <!-- User Modal Form -->
     <div id="userModal" class="modal">
         <div class="modal-content shadow-card">
             <div class="modal-header">
@@ -127,6 +166,31 @@
                 <div class="form-actions">
                     <button type="button" class="btn btn-secondary" onclick="closeModal()">Cancel</button>
                     <button type="submit" class="btn btn-primary">Save User</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Blog Modal Form -->
+    <div id="blogModal" class="modal">
+        <div class="modal-content shadow-card">
+            <div class="modal-header">
+                <h2 id="blogModalTitle">Add New Blog</h2>
+                <button class="close-btn" onclick="closeBlogModal()">&times;</button>
+            </div>
+            <form id="blogForm">
+                <input type="hidden" id="blogId">
+                <div class="form-group">
+                    <label>Title</label>
+                    <input type="text" id="blogTitle" required>
+                </div>
+                <div class="form-group">
+                    <label>Content</label>
+                    <textarea id="blogContent" rows="5" required style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px;"></textarea>
+                </div>
+                <div class="form-actions">
+                    <button type="button" class="btn btn-secondary" onclick="closeBlogModal()">Cancel</button>
+                    <button type="submit" class="btn btn-primary">Save Blog</button>
                 </div>
             </form>
         </div>
