--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,6 +57,21 @@
                     <input type="text" placeholder="Search...">
                 </div>
                 <div class="user-profile">
+                    <div class="notification-container" id="notificationBtn">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+                            <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+                        </svg>
+                        <span class="notification-badge" id="notificationBadge" style="display: none;">0</span>
+                        <div class="notification-dropdown shadow-card" id="notificationDropdown">
+                            <div class="dropdown-header">
+                                <h3>Notifications</h3>
+                            </div>
+                            <div class="dropdown-content" id="notificationList">
+                                <p class="empty-msg">No new notifications</p>
+                            </div>
+                        </div>
+                    </div>
                     <span class="avatar">AD</span>
                     <span class="name">Admin User</span>
                 </div>
